Immediately create and add Collection/List/Set nodes for DoEntity
It is not possible to create/put them later as this would lead to
concurrency issues (e.g. multiple threads trying to get the same entity
which might trigger concurrent putNode calls).

396980